# examples

./: README.md
.github/workflows/: test-examples.yaml
blackjack/: README.md
blackjack/encrypted-ixs/src/: lib.rs
blackjack/programs/blackjack/: Cargo.toml
blackjack/tests/: blackjack.ts
coinflip/: README.md
coinflip/encrypted-ixs/src/: lib.rs
coinflip/programs/coinflip/: Cargo.toml
coinflip/tests/: coinflip.ts
ed25519/: README.md
ed25519/encrypted-ixs/src/: lib.rs
ed25519/programs/ed_25519/: Cargo.toml
ed25519/tests/: ed_25519.ts
privateperps/: Anchor.toml  README.md
privateperps/encrypted-ixs/src/: lib.rs
privateperps/programs/privateperps/: Cargo.toml
privateperps/tests/: coinflip.ts
rock_paper_scissors/: README.md
rock_paper_scissors/against-house/: README.md  package.json
rock_paper_scissors/against-house/tests/: rock_paper_scissors_against_rng.ts
rock_paper_scissors/against-player/: README.md
rock_paper_scissors/against-player/programs/rock_paper_scissors/: Cargo.toml
rock_paper_scissors/against-player/programs/rock_paper_scissors/src/: lib.rs
rock_paper_scissors/against-player/tests/: rock_paper_scissors.ts
sealed_bid_auction/: README.md  package.json
sealed_bid_auction/encrypted-ixs/src/: lib.rs
sealed_bid_auction/programs/sealed_bid_auction/: Cargo.toml
sealed_bid_auction/tests/: sealed_bid_auction.ts
share_medical_records/: README.md
share_medical_records/tests/: share_medical_records.ts
voting/: README.md  package.json
voting/encrypted-ixs/: Cargo.toml
voting/tests/: voting.ts
(+15 files in other folders)
